Fix screen overflow issues with body

--- a/frontend/src/components/AssessmentList/style.scss
+++ b/frontend/src/components/AssessmentList/style.scss
@@ -1,7 +1,6 @@
 @import "../../_partials.scss";
 
 .assessment-list-wrapper {
-	margin-right: 15px;
 	margin-bottom: 25px;
 }
 
