--- a/frontend/src/components/FeedbackList/style.scss
+++ b/frontend/src/components/FeedbackList/style.scss
@@ -7,7 +7,3 @@
 	padding-left: 15px;
 	padding-right: 15px;
 }
-
-.assessment-feedback-list-wrapper {
-	margin-left: 15px;
-}
