--- a/frontend/src/containers/Header/style.scss
+++ b/frontend/src/containers/Header/style.scss
@@ -12,6 +12,7 @@
 }
 
 header {
+	box-sizing: content-box;
 	position: fixed;
 	top: 0px;
 	left: 0px;
